--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,11 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Run Maven Test
 
 on:
   push:
-    branches: [ master ]
+    branches: [pliem1991-patch-1, master]
 
 jobs:
   build:
