--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>testci.main</mainClass>
+							<mainClass>testcii.main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
